<resources>
    <string name="app_name">AndroidSensors</string>
    <string name="action_settings">Settings</string>
    <string name="latitude">Latitude</string>
    <string name="x_value">X-Value</string>
    <string name="y_value">Y-Value</string>
    <string name="z_value">Z-Value</string>
    <string name="show_data">Show Data</string>
    <string name="longitude">Longitude</string>
</resources>
