<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/relativeLayout"
                                                   android:layout_width="wrap_content"
                                                   android:layout_height="match_parent" tools:context=".MainActivity">

oid:layout_marginEnd="140dp" android:layout_marginBottom="68dp"
        android:text="@string/longitude"/>-->
    <TextView
        android:id="@+id/txtViewX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:text="@string/x_value" app:layout_constraintBottom_toTopOf="@+id/txtViewY"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/txtViewY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:text="@string/y_value" app:layout_constraintBottom_toTopOf="@+id/txtViewZ"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/txtViewZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp" android:text="@string/z_value"
        android:textSize="14sp" app:layout_constraintBottom_toTopOf="@+id/btnShowData"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/btnShowData"
        android:layout_width="411dp"
        android:layout_height="78dp"
        android:layout_marginBottom="16dp" android:text="@string/show_data"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>